manifests/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service-lb
  namespace: microservices
  labels:
    app: notification-service
    type: loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: notification-service
